added app.py and updated climate_analysis.ipynb

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,8 @@
    "outputs": [],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "start_date = dt.date(2017,8,23) - "
    ]
   },
   {
