--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -364,13 +364,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(58.0, 87.0, 74.59058295964125)]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, average, and maximum temperatures for that range of dates\n",
-    "start_date = dt.date(2017,8,23) - "
+    "start_date = dt.date(2017,8,23) - dt.timedelta(days=365)\n",
+    "\n",
+    "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
+    "filter(Measurement.date >= start_date).all()"
    ]
   },
   {
@@ -382,10 +396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "def calc_temps(start_date, end_date):\n",
+    "    session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
+    "    filter(func.strftime(\"%Y-%m-%d\", Measurement.date) >= start_date).\\\n",
+    "    filter(func.strftime(\"%Y-%m-%d\", Measurement.date) <= end_date).all()\n",
+    "    \n",
+    "calc_temps(\"2017-8-23\", \"2017-9-23\")"
+   ]
   },
   {
    "cell_type": "code",
