add june_temps list to SurSurfsUp_Challenge.ipynb

--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -68,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  3. Convert the June temperatures to a list.\n",
-    "#temp_list = [item[1] for item in june_temps]"
+    "temp_list = [item[1] for item in june_temps]"
    ]
   },
   {
