add june_temp_df and summary statistics

--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "# 4. Create a DataFrame from the list of temperatures for the month of June. \n",
-    "#df = pd.DataFrame(temp_list, columns=['june_temp'])"
+    "df = pd.DataFrame(temp_list, columns=['june_temp'])"
    ]
   },
   {
@@ -171,7 +171,7 @@
    ],
    "source": [
     "# 5. Calculate and print out the summary statistics for the June temperature DataFrame.\n",
-    "#df.describe()"
+    "df.describe()"
    ]
   },
   {
