add dec_temps query to SurfsUp_Challenge.ipynb

--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "# 6. Write a query that filters the Measurement table to retrieve the temperatures for the month of December.\n",
-    "#dec_temps = session.query(Measurement.date, Measurement.tobs).filter(extract('month', Measurement.date) == 12).all()"
+    "dec_temps = session.query(Measurement.date, Measurement.tobs).filter(extract('month', Measurement.date) == 12).all()"
    ]
   },
   {
