--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -198,7 +198,7 @@
    "outputs": [],
    "source": [
     "# 7. Convert the December temperatures to a list.\n",
-    "#dec_temp_list = [item[1] for item in dec_temps]"
+    "dec_temp_list = [item[1] for item in dec_temps]"
    ]
   },
   {
