--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,17 +203,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8. Create a DataFrame from the list of temperatures for the month of December. \n",
-    "#dec_df = pd.DataFrame(dec_temp_list, columns=['december_temp'])"
+    "dec_df = pd.DataFrame(dec_temp_list, columns=['december_temp'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -289,14 +289,14 @@
        "max        83.000000"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 9. Calculate and print out the summary statistics for the Decemeber temperature DataFrame.\n",
-    "#dec_df.describe()"
+    "dec_df.describe()"
    ]
   },
   {
